# myview

./: CMakeLists.txt  LICENSE  README.md
desktop/: myview.desktop
linux/: myview.desktop
src/: imagetab.cpp  imagetab.h  main.cpp  mainwindow.cpp  mainwindow.h  myview.qrc  style.qss
